# GameTaxi

./: CMakeLists.txt  README.md
GameTaxi-main/game/gameFile/: checkEndGame.cpp  collisionCheck.cpp  declaration.hpp  init.cpp  main.cpp  redRawFrame.cpp  upDateCar.cpp  update.cpp  updateAlgoCar.cpp  updateUserCar.cpp
game/: CMakeLists.txt
game/game/gameFile/: collisionCheck.cpp  collisionCheckInitPass.cpp  declaration.hpp  goCarFunc.cpp  init.cpp  main.cpp  mous.cpp  pollEvents.cpp  redRawFrame.cpp  redrawFrame.cpp  upDateCar.cpp  update.cpp  updateUserCar.cpp
game/gameFile/: CMakeLists.txt  algoDijkstra.cpp  collisionCheck.cpp  collisionCheckInitPass.cpp  declaration.hpp  goCarFunc.cpp  init.cpp  main.cpp  mous.cpp  pollEvents.cpp  redRawFrame.cpp  upDateCar.cpp  update.cpp  updateAlgoCar.cpp  updateDestination.cpp  updatePassenger.cpp  updateUserCar.cpp
game/level/: Level1Map.txt  fileLevel1Obstruction.txt
level/: fileLevel1Obstruction.txt
